# sharcnet_helper

./: pyproject.toml  setup.py
src/: __init__.py
src/sharcnet_helper/: DirectivesException.py  EnvException.py  __init__.py  directives.py  env.py  python_packages.py  sbatch_utils.py
tests/: fake_process.py  test_directives.py  test_make_batch_file.py
