[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharcnet_helper"
version = "2.2"
description = ""
requires-python = ">=3.6"
# readme = "README.md"
license = { text = "GPL" }
authors = [{ name = "Tristan" }]
#urls = { "Homepage" = "" }
# Add other fields such as classifiers or dependencies if needed.
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]