[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sharcnet_helper"
dynamic = ["version"]
description = ""
# readme = "README.md"
license = { text = "GPL" }
authors = [{ name = "Tristan" }]
#urls = { "Homepage" = "" }

# Add other fields such as classifiers or dependencies if needed.
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools_scm]